--- a/About.html
+++ b/About.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<title>ABOUT PAGE</title>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="style2.css">
+	
 </head>
 <body>
 	<header>
@@ -23,7 +26,7 @@
           <a href="https://en.wikipedia.org/wiki/List_of_national_days">National Days</a>
   </div>
 </div>
-</nav><br><br>
+</nav><br>
 <article>
 <h2>Interesting facts about India:</h2>
 <ul>
@@ -42,13 +45,13 @@
 <img src="media/national_flag.jpg">
 </article><br>
 
-<article>
+<article class="anthem">
 	<h2>National Anthem of India</h2>
 	<p>The song Jana-gana-mana, composed originally in Bengali by Rabindranath Tagore, was adopted in its Hindi version by the Constituent Assembly as the National Anthem of India on 24 January 1950.</p>
 	<audio controls>
 		<source src="media/jan.mp3" type="audio/mp3">
 	</audio>
-<video width="320" height="240" autoplay controls>
+<video width="320" height="240" controls>
 	<source src="media/janganman.mp4" type="video/mp4">
 </video>
 
